clusters/main/kubernetes/flux-system/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod # use what you have configured for your ingress
    cert-manager.io/private-key-rotation-policy: Always
spec:
  ingressClassName: internal
  rules:
  - host: capacitor.${DOMAIN_0} # use what you have configured for your ingress
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: capacitor
            port:
              number: 9000
  tls:
    - hosts:
      - capacitor.${DOMAIN_0} # use what you have configured for your ingress
      secretName: capacitor-tls-0 # use what you have configured for your ingress
